# wifi_manager

./: Makefile  README.md  pyproject.toml
src/web/theme/static_src/: package-lock.json  package.json  tailwind.config.js
src/web/theme/templates/: base.html
src/web/web/: settings.py  urls.py
src/web/wifi/: admin.py  models.py  tests.py  urls.py  views.py
src/web/wifi/migrations/: 0001_initial.py  0002_alter_devicedjango_ip_address_and_more.py  0003_alter_devicedjango_ip_address_and_more.py
src/web/wifi/templates/wifi/: _base.html  devices_allowed.html  devices_blocked.html  index.html
src/wifi_manager/: auth.py  client.py  devices.json  main.py  models.py  network.py  network_scan.sh  repository.py  services.py
tests/: auth_test.py  main_test.py  network_test.py  services_test.py
